--- a/index.html
+++ b/index.html
@@ -16,35 +16,37 @@
 </head>
 
 <body>
-  <div class="background-top"></div>
-  <div class="background-bottom"></div>
-
-  <main class="profile-card">
-    <section class="card-top">
-      <img src="images/image-victor.jpg" alt="victor-image">
-      <span class="card-text">Victor Crest   <span class="card-content">26</span> </span>          
-      <span class="card-content">London</span>
-    </section>
-    <hr>
-    <section class="card-bottom">
-      <div class="card-text">
-        80k
-        <span class="card-content">Followers</span>
-      </div>
-      <div class="card-text">
-        803K
-        <span class="card-content">Likes</span>
-      </div>
-      <div class="card-text">
-        1.4K
-        <span class="card-content">Photos</span>
-      </div>      
-    </section>     
+  <main> 
+    <div class="background-top"></div>
+    <div class="background-bottom"></div>   
+    <section class="profile-card">
+      <section class="card-top">
+        <img src="images/image-victor.jpg" alt="victor-image">
+        <h2 class="card--text">Victor Crest   <span class="card__content">26</span> </h2>          
+        <p class="card--detail">London</p>
+      </section>
+      <hr>
+      <section class="card-bottom">
+        <div class="card--text">
+          <span>80k</span>
+          <span class="card__content">Followers</span>
+        </div>
+        <div class="card--text">
+          <span>803K</span>
+          <span class="card__content">Likes</span>
+        </div>
+        <div class="card--text">
+          <span>1.4K</span>
+          <span class="card__content">Photos</span>
+        </div>      
+      </section>  
+    </section> 
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io/solutions" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/ab-irami" target="_blank">Abirami</a>.
+    </footer>   
   </main>
 
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io/solutions" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/ab-irami" target="_blank">Abirami</a>.
-  </footer>   
+   
 </body>
 </html>
